--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=blog
 server.port=${PORT:8080}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/blogPost_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql//mysql.railway.internal/railway?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=27122000@ziko
+spring.datasource.password=zkVKnTEQxBlDeWjLLOmYlGcnvHPTJcmA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Settings
@@ -22,15 +22,18 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 # File Upload Directory
-app.upload.dir=C:/Users/ALLMIGHTY/Documents/blogUploads/uploads/    #windows
+#app.upload.dir=C:/Users/ALLMIGHTY/Documents/blogUploads/uploads/
 #app.upload.dir=/home/zakaria/blogUploads/uploads/
-app.upload.dir.profile-images=C:/Users/ALLMIGHTY/Documents/blogUploads/uploads/profile-images
+#app.upload.dir.profile-images=C:/Users/ALLMIGHTY/Documents/blogUploads/uploads/profile-images
+#Railway
+app.upload.dir=uploads
+app.upload.dir.profile-images=uploads/profile-images
 
 # Email Configuration
 spring.mail.host=smtp.example.com
 spring.mail.port=587
-spring.mail.username=zakariafarih142@gmail.com
-spring.mail.password=egnf azzd hugv ofzf
+spring.mail.username=newcoder142@gmail.com
+spring.mail.password=rkqi jnue vwna evzt 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
