--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=blog
 server.port=${PORT:8080}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql//mysql.railway.internal/railway?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql.railway.internal/railway?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=zkVKnTEQxBlDeWjLLOmYlGcnvHPTJcmA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
