set up persistent storage on railway then edited app props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,8 +26,8 @@ spring.security.user.password=admin
 #app.upload.dir=/home/zakaria/blogUploads/uploads/
 #app.upload.dir.profile-images=C:/Users/ALLMIGHTY/Documents/blogUploads/uploads/profile-images
 #Railway
-app.upload.dir=uploads
-app.upload.dir.profile-images=uploads/profile-images
+app.upload.dir=/data/uploads
+app.upload.dir.profile-images=/data/uploads/profile-images
 
 # Email Configuration
 spring.mail.host=smtp.example.com
